# lightrnn-forward

./: CMakeLists.txt  README  README.md  lightrnn_model.cpp  lightrnn_model.h  main.cpp  predict_model.cpp  predict_model.h  util.cpp  util.h
